fixed gap under grid

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,8 +11,8 @@
 
 body {
     color: var(--grey);
-    background-color: var(--green); 
-    background: linear-gradient(var(--green), var(--blue)); 
+    background-color: var(--green);
+    background: linear-gradient(var(--green), var(--blue));
 
     /* Optional background image in the future */
     /* background-image: url("./images/tree-background-sean-d-TKn8uxc20vQ-unsplash.jpg"); */
@@ -32,48 +32,26 @@ a {
     justify-content: space-between;
     margin-right: 20px;
     margin-left: 20px;
-    
 }
 
 header {
     display: flex;
-    
 }
 
 nav ul li {
     padding: 10px;
     display: inline;
     font-size: 20px;
-    
 }
 
 .content {
     display: flex;
-    
 }
-/* 
-.profile_pic {
-    display: block;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;   
-    /* width: 200px; */
-    /* height: 200px; */
-    /* margin: 10px; 
-} 
-*/
 
 main {
     display: flex;
     flex-direction: column;
     margin: auto;
-    /* flex-basis: auto; */
-    /* margin-top: 0px; */
-    /* margin-right: 100px; */
-}
-
-#work {
-    height: auto;
 }
 
 #work h2 {
@@ -92,47 +70,42 @@ main {
     grid-area: third;
 }
 
-
 .profile_pic img {
     display: block;
     object-fit: cover;
-    height: 300px; 
+    height: 300px;
     width: auto;
-    
 }
 
 .profile_pic {
-    position: relative; 
+    position: relative;
     background-color: var(--grey);
     padding: 3px;
     margin: 7px;
-    height:fit-content;
-    width:fit-content;
+    height: fit-content;
+    width: fit-content;
 }
 
-
 #work {
-    
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 30% 30%;
-    
-    grid-template-areas: 
+    /* grid-template-rows: 50px 20% 20%;  */
+    grid-template-rows: min-content;
+
+    grid-template-areas:
         "title title"
         "top top"
         "second third";
 }
 
-
 .prework,
 .refactor,
 .portfolio_repo {
-    position: relative; 
+    position: relative;
     background-color: var(--grey);
     padding: 3px;
     margin: 7px;
 }
-
 
 .prework img,
 .refactor img,
@@ -140,18 +113,17 @@ main {
     display: block;
     object-fit: cover;
     width: 100%;
-    height: 100%;   
+    height: 300px;
 }
-
 
 .prework h3,
 .refactor h3,
 .portfolio_repo h3 {
-    position: absolute; 
-    background: var(--transparent); /* overlay */
+    position: absolute;
+    background: var(--transparent);
     width: 75%;
     font-size: 20px;
-    text-align: center; 
+    text-align: center;
 }
 
 #contact {
@@ -167,12 +139,12 @@ main {
 
 #contact ul li {
     display: inline-flex;
-    padding:inherit;
+    padding: inherit;
 }
 
 @media screen and (max-width: 1130px) {
     .content {
-        display:block;
+        display: block;
     }
 
-} 
+}
